[package]
name = "examples"
version = "0.0.0"
publish = false
rust-version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }

# If you copy one of the examples into a new project, you should be using
# [dependencies] instead.
[dev-dependencies]
anyhow = "1.0"
bytes = "1"
futures = "0.3"
http3-rs = { path = "../http3", features = ["tracing"] }
http3-quinn-rs = { path = "../http3-quinn", features = ["tracing", "datagram"] }
http3-webtransport-rs = { path = "../http3-webtransport" }
http = "1"
quinn = { version = "0.11", default-features = false, features = [
    "runtime-tokio",
    "rustls",
    "ring",
] }
rcgen = { workspace = true }
time = { workspace = true }
rustls = { version = "0.23", default-features = false, features = [
    "logging",
    "ring",
    "std",
] }
rustls-native-certs = "0.8"
structopt = "0.3"
tokio = { version = "1.27", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "fmt",
    "ansi",
    "env-filter",
    "time",
    "tracing-log",
] }
octets = "0.3.0"

tracing-tree = { version = "0.4" }
http3-datagram-rs = { path = "../http3-datagram" }

[features]
tree = []

[[example]]
name = "client"
path = "client.rs"

[[example]]
name = "server"
path = "server.rs"

[[example]]
name = "webtransport_server"
path = "webtransport_server.rs"
