[package]
name = "http3-webtransport-rs"
version = "0.1.2"
edition = "2021"
documentation = "https://docs.rs/http3-webtransport-rs"
repository = "https://github.com/0x676e67/http3-rs"
readme = "readme.md"
description = "WebTransport extension for http3-rs"
keywords = ["http3", "quic", "webtransport"]
categories = ["network-programming", "web-programming"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1"
futures-util = { version = "0.3", default-features = false }
http = "1"
pin-project-lite = { version = "0.2", default-features = false }
tracing = "0.1.37"
tokio = { version = "1.28", default-features = false }
http3-datagram-rs = { version = "0.0.2", path = "../http3-datagram" }

[dependencies.http3-rs]
version = "0.0.8"
path = "../http3"
features = ["i-implement-a-third-party-backend-and-opt-into-breaking-changes"]
