[package]
name = "http3-rs"
version = "0.0.8"
rust-version = { workspace = true }
authors = [
    "Sean McArthur <sean@seanmonstar.com>",
    "Jean-Christophe BEGUE <jc.begue@pm.me>",
]
license = "MIT"
edition = { workspace = true }
documentation = "https://docs.rs/http3-rs"
repository = { workspace = true }
readme = "../README.md"
description = "An async HTTP/3 implementation."
keywords = ["http3", "quic"]
categories = [
    "network-programming",
    "web-programming::http-client",
    "web-programming::http-server",
]

[features]
i-implement-a-third-party-backend-and-opt-into-breaking-changes = []
tracing = ["dep:tracing"]

[dependencies]
bytes = "1"
futures-util = { version = "0.3", default-features = false, features = ["io"] }
http = "1"
tokio = { version = "1", features = ["sync"] }
pin-project-lite = { version = "0.2", default-features = false }
tracing = {version = "0.1.40", optional = true}
fastrand = "2.0.1"
smallvec = "1.15.0"

[dev-dependencies]
assert_matches = "1.5.0"
futures-util = { version = "0.3", default-features = false, features = ["io"] }
proptest = "1"
quinn = { version = "0.11", default-features = false, features = [
    "runtime-tokio",
    "rustls",
    "ring",
] }
quinn-proto = { version = "0.11", default-features = false }
rcgen = { workspace = true }
time = { workspace = true }
rustls = { version = "0.23", default-features = false, features = ["logging", "ring", "std"] }
tokio = { version = "1", features = ["rt", "macros", "io-util", "io-std"] }
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "fmt",
    "ansi",
    "env-filter",
    "time",
    "tracing-log",
] }
futures = { version = "0.3.28" }
tokio-util = { version = "0.7.9" }
http3-datagram-rs = { path = "../http3-datagram" }
